--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ main .first-section h1 {
   height: 311px;
   width: 80%;
   text-align: left;
+  justify-content: space-around;
 }
 .third-section p,
 h3,
@@ -125,4 +126,72 @@ label {
 .third-section img {
   height: 24px;
   width: 24px;
+}
+select {
+  margin-top: 10%;
+  width: 100%;
+  background: transparent;
+  border: 0;
+  border-radius: 0;
+  padding: 0 2em 0 0;
+  -webkit-appearance: none;
+  outline: 0;
+  text-transform: none;
+  text-decoration: underline;
+  cursor: pointer;
+  color: #fff;
+  text-shadow: none;
+  letter-spacing: 0.04em;
+  font-size: 1.2rem;
+  text-align: left;
+}
+.text-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 200px;
+  align-items: left;
+}
+.text-block h1,
+h2 {
+  color: #fff;
+}
+.clinic .select-list {
+  height: 116px;
+}
+.fourth-section {
+  display: flex;
+  width: 140%;
+}
+.svg-list {
+  display: flex;
+  width: 46%;
+  flex-direction: column;
+}
+.svg-list .logos {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  margin: 13px;
+}
+svg {
+  height: 20px;
+  width: 125px;
+  color: #747474;
+}
+.svg-list .logos img {
+  height: 20px;
+  width: 125px;
+}
+.fourth-text-block {
+  width: 25%;
+}
+.fourth-text-block h1 {
+  color: #00b39b;
+  font-size: 23px;
+  font-family: Work Sans, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: -0.3px;
+  text-align: left;
 }
