--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ label {
   height: 24px;
   width: 24px;
 }
-select {
+.third-section select {
   margin-top: 10%;
   width: 100%;
   background: transparent;
@@ -160,38 +160,77 @@ h2 {
   height: 116px;
 }
 .fourth-section {
-  display: flex;
-  width: 140%;
+  margin: 0 auto;
 }
-.svg-list {
+.fourth-section .content-4 {
   display: flex;
-  width: 46%;
+}
+.content-4-text {
+  width: 40%;
+  margin: 5px;
+}
+.fourth-section .content-4-logo ul li {
+  display: inline-block;
   flex-direction: column;
+  margin: 5px;
+  font-size: 1rem;
+  margin-top: 0;
+  padding: 5px 0 5px 5px;
+  width: auto;
 }
-.svg-list .logos {
-  width: 100%;
+.content-4-logo {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 5px;
+}
+.list-1 {
   display: flex;
   justify-content: space-around;
-  gap: 20px;
-  margin: 13px;
 }
-svg {
-  height: 20px;
-  width: 125px;
-  color: #747474;
+.list-2 {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
-.svg-list .logos img {
-  height: 20px;
-  width: 125px;
-}
-.fourth-text-block {
-  width: 25%;
-}
-.fourth-text-block h1 {
-  color: #00b39b;
-  font-size: 23px;
-  font-family: Work Sans, Arial, sans-serif;
-  font-weight: 300;
-  letter-spacing: -0.3px;
+.content-4-text h1 {
   text-align: left;
+  color: #00b39b;
+  font-size: 35px;
+  font-weight: 300;
+}
+.list-1 a svg {
+  height: 20px;
+  width: auto;
+  max-width: 100%;
+  padding-left: 10px;
+  fill: #747474;
+}
+.list-1 a:hover path {
+  fill: #00bfa5;
+}
+.list-2 .list-2-logo a {
+  height: 20px;
+  width: auto;
+  max-width: 100%;
+  padding-left: 10px;
+  fill: #747474;
+}
+.list-2 .list-2-logo a img {
+  height: 20px;
+  width: auto;
+  max-width: 100%;
+  padding-left: 10px;
+  filter: grayscale(100%);
+}
+.list-2 .list-2-logo a:hover {
+  fill: #00bfa5;
+}
+.list-2 .list-2-logo a img:hover {
+  filter: none;
+  opacity: 1;
+}
+.content-4 {
+  margin: 60px 0;
 }
