--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ main .first-section h1 {
   gap: 20px;
 }
 .third-section .patient {
-  background-color: #00b39b;
+  background-color: #00ccb1;
+  opacity: 0.9;
 }
 .third-section .doctor {
   background-color: #3d83df;
@@ -122,6 +123,19 @@ h3,
 option,
 label {
   color: white;
+}
+.text-block h1 {
+  font-size: 1.625em;
+  font-weight: 400;
+  color: #fff;
+  margin: 0.3em 0;
+}
+.text-block h2 {
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 0;
+  color: #fff;
 }
 .third-section img {
   height: 24px;
@@ -233,4 +247,169 @@ h2 {
 }
 .content-4 {
   margin: 60px 0;
+}
+.fifth-section {
+  display: flex;
+  background: #e5faf8;
+  padding: 1.875em 0 0.625em;
+  margin: 3.125rem auto 5.5rem;
+  width: 125%;
+  margin-left: -130px;
+}
+.grid {
+  display: flex;
+}
+.grid h1 {
+  color: #00bfa5;
+  font-size: 2.125rem;
+  font-weight: 300;
+  letter-spacing: -0.3px;
+}
+.grid h3 {
+  color: #00bfa5;
+  font-family: Work Sans, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: -0.3px;
+}
+.grid p {
+  font-weight: 400;
+  font-family: Roboto, Arial, sans-serif;
+  color: #747474;
+}
+.right-5 {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  padding: 10px;
+  display: grid;
+  grid-template-areas:
+    "1 2"
+    "1 2";
+  gap: 10px;
+  padding: 10px;
+}
+.right-item-1 {
+  grid-area: 1;
+  width: 230px;
+  height: 270px;
+  background-color: white;
+}
+.right-item {
+  grid-area: 2;
+  width: 230px;
+  height: 270px;
+  background-color: white;
+}
+
+.right-5 .right-item-1 .right-item {
+  background-color: white;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+.left-5 h1 {
+  margin-bottom: 43px;
+}
+.left-5 {
+  display: block;
+  text-align: left;
+  margin: 31px 66px;
+}
+.blocks {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+.blocks img {
+  margin: 40px auto;
+}
+.blocks h3 {
+  margin: 14px auto;
+}
+.main .fifth-section {
+  width: 100%;
+}
+.section-list {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.content-6 {
+  margin: 10px;
+}
+.section-header {
+  display: block;
+}
+.section-header h1 {
+  height: 60px;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  color: #00bfa5;
+  font-size: 2.125rem;
+  font-weight: 300;
+  letter-spacing: -0.3px;
+}
+.section-header p {
+  height: 60px;
+  display: flex;
+  align-content: center;
+  width: 520px;
+  margin: 70px auto;
+  font-weight: 400;
+  font-family: Roboto, Arial, sans-serif;
+  color: #747474;
+  letter-spacing: -0.5px;
+}
+.office__desc {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.125em;
+  font-weight: 400;
+  line-height: 1.6666666667;
+  padding: 1.1111111111em;
+}
+.office .btn {
+  float: right;
+}
+.btn--small {
+  font-size: 0.625rem;
+  padding: 1em 1.5em;
+}
+.btn {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  outline: 0;
+  border: 0;
+  border-radius: 4px;
+  padding: 1.1666666667em 1.5em;
+  background: #3d83df;
+  font-family: Roboto, Arial, sans-serif;
+  line-height: 1em;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  font-size: 0.75rem;
+  text-align: center;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  transition: all 0.2s ease 0s;
+}
+.join-us__header {
+  display: block;
+  max-width: 520px;
+  margin: 0 auto;
+  font-size: 0.875em;
+  text-align: center;
+}
+.join-us__header h1 {
+  font-size: 2.1428571429em;
+  color: #333;
+  margin-bottom: 0.75em;
+}
+.join-us-section__inner {
+  margin: 90px auto;
 }
