the real real final update

--- a/style.css
+++ b/style.css
@@ -374,6 +374,9 @@ h2 {
 }
 .content-6 {
   margin: 10px;
+  border: 0.5px black thin;
+}
+.content-6:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .section-header {
